--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,11 +60,11 @@ deploy:
     - cd $TF_ROOT
   script:
     - aws ec2 describe-addresses --query 'Addresses[?AssociationId==null].AllocationId' --output text | xargs -n1 aws ec2 release-address --allocation-id 2>/dev/null || true
-    - aws rds delete-db-instance --db-instance-identifier lamp-visitor-analytics-db-replica --skip-final-snapshot --region eu-central-1 2>/dev/null || true
-    - aws ecs update-service --cluster lamp-visitor-analytics --service lamp-visitor-analytics --desired-count 0 --region eu-west-1 2>/dev/null || true
-    - aws ecs delete-service --cluster lamp-visitor-analytics --service lamp-visitor-analytics --region eu-west-1 2>/dev/null || true
-    - aws ecs delete-cluster --cluster lamp-visitor-analytics --region eu-west-1 2>/dev/null || true
-    - aws rds delete-db-instance --db-instance-identifier lamp-visitor-analytics-db --skip-final-snapshot 2>/dev/null || true
+    - aws rds delete-db-instance --db-instance-identifier visitor-analytics-db-replica --skip-final-snapshot --region eu-central-1 2>/dev/null || true
+    - aws ecs update-service --cluster visitor-analytics --service visitor-analytics --desired-count 0 --region eu-west-1 2>/dev/null || true
+    - aws ecs delete-service --cluster visitor-analytics --service visitor-analytics --region eu-west-1 2>/dev/null || true
+    - aws ecs delete-cluster --cluster visitor-analytics --region eu-west-1 2>/dev/null || true
+    - aws rds delete-db-instance --db-instance-identifier visitor-analytics-db --skip-final-snapshot 2>/dev/null || true
     - |
       aws ec2 describe-vpcs --filters "Name=is-default,Values=false" --query 'Vpcs[].VpcId' --output text | while read vpc; do
         aws elbv2 describe-load-balancers --query "LoadBalancers[?VpcId=='$vpc'].LoadBalancerArn" --output text | xargs -n1 aws elbv2 delete-load-balancer --load-balancer-arn 2>/dev/null || true
@@ -111,12 +111,12 @@ test:
   script:
     - export ALB_DNS=$(terraform output -raw primary_alb_dns)
     - echo "🔍 Checking ECS service status..."
-    - aws ecs describe-services --cluster lamp-visitor-analytics --services lamp-visitor-analytics --query 'services[0].{runningCount:runningCount,desiredCount:desiredCount,taskDefinition:taskDefinition}'
+    - aws ecs describe-services --cluster visitor-analytics --services visitor-analytics --query 'services[0].{runningCount:runningCount,desiredCount:desiredCount,taskDefinition:taskDefinition}'
     - echo "⏳ Waiting for deployment to stabilize..."
     - sleep 120
     - echo "🏥 Health Check Test"
     - curl -f -s http://$ALB_DNS/health.php | jq '.' || echo "Health check failed - checking logs"
-    - aws logs tail /ecs/lamp-visitor-analytics --since 5m || true
+    - aws logs tail /ecs/visitor-analytics --since 5m || true
     - echo "🌐 Main Application Test"
     - curl -f -s http://$ALB_DNS/ > /dev/null || echo "Main app failed"
     - echo "📊 API Test"
